--- a/index.html
+++ b/index.html
@@ -1465,20 +1465,12 @@
       </button>
       <button class="ag-tab" role="tab" aria-selected="false"
               data-url="https://agsmartroi3.vercel.app/">
-        OOO농가 수익성 향상 종합 실행 계획서
-      </button>
-      <button class="ag-tab" role="tab" aria-selected="false"
-              data-url="https://agsmartroi4.vercel.app/">
         OOO농가 시간대별 관수 전략 종합 가이드
       </button>
     </div>
 
     <div class="ag-frame-wrap">
-      <iframe id="ag-report-frame" title="스마트팜 리포트 미리보기"
-              src="https://agsmartroi.vercel.app/"
-              loading="lazy"
-              referrerpolicy="no-referrer"
-              sandbox="allow-scripts allow-same-origin allow-forms"></iframe>
+      <iframe id="ag-report-frame" src="https://agsmartroi.vercel.app/" title="리포트 미리보기"></iframe>
     </div>
   </div>
 </section>
@@ -1628,4 +1620,5 @@
 
 
 </body>
+
 </html>
