--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
   border-radius: 10px; box-shadow: 0 8px 24px rgba(0,0,0,.12);
   list-style: none; margin: 0; display: none; z-index: 1000;
 }
-.ag-demo-menu.ag-open { display: block; }
-.ag-demo-menu a {
+.ag--menu.ag-open { display: block; }
+.ag--menu a {
   display: block; padding: 10px 14px; color: #111; text-decoration: none; line-height: 1.4;
 }
-.ag-demo-menu a:hover { background: #f5f7fb; }
+.ag--menu a:hover { background: #f5f7fb; }
 
-/* === demo section === */
-.ag-demo-wrap { padding: 60px 16px; background: #f7f9fc; }
-.ag-demo-card {
+/* ===  section === */
+.ag--wrap { padding: 60px 16px; background: #f7f9fc; }
+.ag--card {
   max-width: 1200px; margin: 0 auto; background: #fff;
   border-radius: 14px; box-shadow: 0 8px 28px rgba(0,0,0,.08);
   overflow: hidden; border: 1px solid rgba(0,0,0,.06);
@@ -1622,3 +1622,4 @@
 </body>
 
 </html>
+
