--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
     </section>
 
     <!-- 데모 섹션 -->
-    <section id="demo" class="py-20 bg-gradient-to-br from-blue-50 to-green-50">
+    <section id="demo1" class="py-20 bg-gradient-to-br from-blue-50 to-green-50">
         <div class="container mx-auto px-4">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-gray-800 mb-4">실시간 데모</h2>
@@ -1633,6 +1633,7 @@
 </body>
 
 </html>
+
 
 
 
